# image-classification

./: .gitignore  README.md  pyproject.toml
image_classifier/data_models/: data_utils.py
image_classifier/models/: network.py
scripts/: main.py
